[metadata]
name = k8s_coredump
summary = A python handler for k8s coredump
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://opendev.org/starlingx/utilities
classifier =

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    k8s_coredump

[entry_points]
console_scripts =
     k8s-coredump = k8s_coredump.__main__:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
